kuber/svc-dp-bk.yml
#backend
---
#service backend
apiVersion: v1
kind: Service
metadata:
  name: dtester-backend
  namespace: dtester
  labels:
    app: dtapi
    tier: backend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: dtapi
    tier: backend
  type: ClusterIP

---
#deployment backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dtester-backend
  namespace: dtester
  labels:
    app: dtapi
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dtapi
      tier: backend
  template:
    metadata:
      labels:
        app: dtapi
        tier: backend
    spec:
      containers:
      - name: dtester-backend
        image: registry.gitlab.com/oleh_kuryshko/dtapi:latest
