kuber/ingress-bk.yml
#ingress backend
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: back-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "cookie-name"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/rewrite-target: /api/
  namespace: dtester
  labels:
    app: dtapi
spec:
  rules:
  - host: dtester-demo.devops.rebrain.srwx.net
    http:
      paths:
      - path: /api/
        backend:
          serviceName: dtester-backend
          servicePort: 80
