kuber/ingress-fr.yml
#ingress frontend
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: front-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "cookie-name"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
  namespace: dtester
  labels:
    app: dtapi
spec:
  rules:
  - host: dtester-demo.devops.rebrain.srwx.net
    http:
      paths:
      - path: /
        backend:
          serviceName: dtester-frontend
          servicePort: 80
